Bring back /warm through the endpoint
